--- a/balena.yml
+++ b/balena.yml
@@ -6,6 +6,15 @@ joinable: false
 post-provisioning: >-
   Check out the [balenaPricing GitHub repo's Readme](https://github.com/rhampt/balena-pricing/blob/main/README.md).
 assets:
+  repository:
+    type: blob.asset
+    data:
+      url: 'https://github.com/rhampt/balena-pricing'
+  # logo:
+  #   type: blob.asset
+  #   data:
+  #     url: >-
+  #       https://raw.githubusercontent.com/rhampt/balena-health/main/images/logo.png
 data:
   defaultDeviceType: raspberrypi4-64
   supportedDeviceTypes:
