--- a/frontend/Dockerfile.template
+++ b/frontend/Dockerfile.template
@@ -1,7 +1,7 @@
 # base-image for node on any machine using a template variable,
 # see more about dockerfile templates here: https://www.balena.io/docs/learn/develop/dockerfile/#dockerfile-templates
 # and about balena base images here: https://www.balena.io/docs/reference/base-images/base-images/
-FROM balenalib/%%BALENA_MACHINE_NAME%%-node:14-buster-run
+FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-node:16.14.2-bullseye-build
 
 # use `install_packages` if you need to install dependencies,
 # for instance if you need git, just uncomment the line below.
@@ -15,13 +15,11 @@ COPY package*.json ./
 
 # This install npm dependencies on the balena build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm install --production --unsafe-perm && npm cache verify && rm -rf /tmp/*
+# RUN npm install -g create-react-app
+RUN npm install
 
 # This will copy all files in our root to the working directory in the container
 COPY . ./
-
-# Enable udevd so that plugged dynamic hardware devices show up in our container.
-ENV UDEV=1
 
 # server.js will run when container starts up on the device
 CMD ["npm", "start"]
